# flatten

./: Cargo.toml  README.md  flatten.md
.github/workflows/: release.yml
src/: cli.rs  error.rs  ignore_handler.rs  main.rs  output.rs  processor.rs
