[package]
name = "flatten"
version = "0.1.0"
edition = "2024"
authors = ["brequet"]
description = "Flatten a codebase into a single file for LLM consumption"

[[bin]]
name = "flatten"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
arboard = "3.5.0"
clap = { version = "4.5.38", features = ["derive"] }
glob = "0.3.2"
ignore = "0.4.23"
walkdir = "2.5.0"
